GNOME Bugzilla – Bug 657261
resindvd: regression in git: no more button highlights in menus
Last modified: 2011-10-06 18:42:27 UTC
I seem to not be getting button highlights any more. I've only tested this with 2 menus so far, needs more testing. Don't know where bug is, filing it here for now. Haven't git-bisected yet either.
Introduced by: commit 105da803ade859fb299ed3c5265d6acdd168ca8f Author: Sebastian Dröge <sebastian.droege@collabora.co.uk> Date: Tue Mar 15 12:51:04 2011 +0100 playbin2/playsink: Decide if A/V caps are raw only inside playsink Before playbin2 would use different selectors for raw audio and compressed audio (and the same for video) and used different pads from playsink. This made the involved logic much more complex and was not implemented completely in playsink, which made it impossible to support files with a compressed and uncompressed stream that is support by the sink. playbin2 handles raw/non-raw streams the same now and the decision is left to playsink, which now can also handle caps changes from raw to non-raw and the other way around. Fixes bug #632788.
Thanks for bisecting!
I'll stop there though, I can't see anything obviously wrong in the patch.
Also causes bug #656665 btw
Actually, two different commits apparently, unless there's some subtle interaction. I've just bisected a problem of "run totem, try to play DVD" to 2f8467d68249e8d1a28b7bbd9c53b56a8c26ba4b, but when 2f8467d68249e8d1a28b7bbd9c53b56a8c26ba4b is gone, and using 105da803ade859fb299ed3c5265d6acdd168ca8f, playback works but highlights are broken.
*** Bug 660816 has been marked as a duplicate of this bug. ***
Created attachment 198422 [details] [review] playbin2: fix mismatch between video/ and video/x-dvd-subpicture The new code was checking for a prefix, and would find video/ first. Check in two passes, first checking for a perfect match, and falling back to a prefix check if nothing was found.
Comment on attachment 198422 [details] [review] playbin2: fix mismatch between video/ and video/x-dvd-subpicture Works great, please push!
commit 76b29367e7b13cc1751724cb2678ebd9039678e1 Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk> Date: Thu Oct 6 11:53:26 2011 +0100 playbin2: fix mismatch between video/ and video/x-dvd-subpicture The new code was checking for a prefix, and would find video/ first. Check in two passes, first checking for a perfect match, and falling back to a prefix check if nothing was found. https://bugzilla.gnome.org/show_bug.cgi?id=657261